--- a/analysis/code_figure_2b.html
+++ b/analysis/code_figure_2b.html
@@ -160,8 +160,8 @@ $(document).ready(function () {
 </tr>
 <tr class="even">
 <td>2</td>
-<td>yap1skn7<span class="math inline">\(\Delta\)</span> Menadione stress</td>
-<td>yap1skn7<span class="math inline">\(\Delta\)</span> unstressed</td>
+<td>yap1<span class="math inline">\(\Delta\)</span>skn7<span class="math inline">\(\Delta\)</span> Menadione stress</td>
+<td>yap1<span class="math inline">\(\Delta\)</span>skn7<span class="math inline">\(\Delta\)</span> unstressed</td>
 </tr>
 </tbody>
 </table>
